# dcache

./: CMakeLists.txt  Makefile  README.md  comtest  comtest.c  comtestclient  comtestclient.c  dCacheClient  dCacheClient.c  dCacheServer  dCacheServer.c
communication/: message  message.c  message.h
storage/: datastorage  datastorage.c  datastorage.h
